# pythran-numpy-2

./: dprod.py  meson.build
.github/workflows/: windows.yml
